--- a/backend/.env.example
+++ b/backend/.env.example
@@ -20,3 +20,6 @@ CLOUDINARY_API_SECRET=
 # pg-boss (optional overrides)
 PGBOSS_SCHEMA=pgboss
 PGBOSS_MONITOR_INTERVAL=30000
+
+# Internal API key (for ML worker callbacks)
+INTERNAL_API_KEY=dev-internal-key
