geo location based attendence and check-in and checkout time update to db and employeeId as per format given

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -17,6 +17,14 @@ CLOUDINARY_CLOUD_NAME=
 CLOUDINARY_API_KEY=
 CLOUDINARY_API_SECRET=
 
+# Email Configuration (SMTP)
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=587
+EMAIL_USER=darshanvipulkumarrathod81@gmail.com
+EMAIL_PASSWORD=rloagpbhxerkoemt
+EMAIL_FROM=WorkZen HRMS <noreply@workzen.com>
+FRONTEND_URL=http://localhost:5173
+
 # pg-boss (optional overrides)
 PGBOSS_SCHEMA=pgboss
 PGBOSS_MONITOR_INTERVAL=30000
