--- a/backend/package.json
+++ b/backend/package.json
@@ -29,15 +29,16 @@
   },
   "dependencies": {
     "@prisma/client": "^5.20.0",
-    "cookie-parser": "^1.4.6",
     "bcrypt": "^5.1.1",
     "cloudinary": "^2.5.1",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "nodemailer": "^7.0.10",
     "pg": "^8.13.1",
     "pg-boss": "^10.1.3",
     "winston": "^3.14.2",
@@ -50,11 +51,11 @@
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.6",
-    "@types/node": "^22.7.6",
     "@types/morgan": "^1.9.9",
-    "@types/winston": "^2.4.4",
+    "@types/node": "^22.7.6",
+    "@types/nodemailer": "^7.0.3",
     "@types/supertest": "^6.0.3",
-    "tsx": "^4.19.2",
+    "@types/winston": "^2.4.4",
     "eslint": "^9.10.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
@@ -66,6 +67,7 @@
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
+    "tsx": "^4.19.2",
     "typescript": "^5.6.3"
   }
 }
