--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,8 @@
     "start": "node dist/server.js",
     "start:dev": "tsx watch src/server.ts",
     "dev": "tsx watch src/server.ts",
-    "build": "tsc -p tsconfig.json",
+    "build": "tsc -p tsconfig.build.json",
+    "render-build": "prisma generate && prisma migrate deploy && yarn build",
     "lint": "eslint \"**/*.{ts,tsx}\" --max-warnings=0",
     "format": "prettier --write .",
     "test": "jest",
