Update Prisma commands to use npx

--- a/backend/package.json
+++ b/backend/package.json
@@ -11,22 +11,22 @@
     "start:dev": "tsx watch src/server.ts",
     "dev": "tsx watch src/server.ts",
     "build": "tsc -p tsconfig.build.json",
-    "render-build": "prisma generate && prisma migrate deploy && yarn build",
+    "render-build": "npx prisma generate && npx prisma migrate deploy && yarn build",
     "lint": "eslint \"**/*.{ts,tsx}\" --max-warnings=0",
     "format": "prettier --write .",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "migrate": "prisma migrate dev",
-    "prisma:generate": "prisma generate",
-    "prisma:migrate": "prisma migrate dev",
-    "prisma:deploy": "prisma migrate deploy",
-    "prisma:studio": "prisma studio",
+    "migrate": "npx prisma migrate dev",
+    "prisma:generate": "npx prisma generate",
+    "prisma:migrate": "npx prisma migrate dev",
+    "prisma:deploy": "npx prisma migrate deploy",
+    "prisma:studio": "npx prisma studio",
     "seed": "tsx prisma/seed.ts",
     "prisma:seed": "tsx prisma/seed.ts",
     "worker:start": "tsx watch src/jobs/worker.ts",
     "prepare": "husky install",
-    "postinstall": "prisma generate"
+    "postinstall": "npx prisma generate || true"
   },
   "dependencies": {
     "@prisma/client": "^5.20.0",
