Update Prisma commands in package.json

--- a/backend/package.json
+++ b/backend/package.json
@@ -11,25 +11,26 @@
     "start:dev": "tsx watch src/server.ts",
     "dev": "tsx watch src/server.ts",
     "build": "tsc -p tsconfig.build.json",
-    "render-build": "npx prisma generate && npx prisma migrate deploy && yarn build",
+    "render-build": "prisma generate && prisma migrate deploy && yarn build",
     "lint": "eslint \"**/*.{ts,tsx}\" --max-warnings=0",
     "format": "prettier --write .",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "migrate": "npx prisma migrate dev",
-    "prisma:generate": "npx prisma generate",
-    "prisma:migrate": "npx prisma migrate dev",
-    "prisma:deploy": "npx prisma migrate deploy",
-    "prisma:studio": "npx prisma studio",
+    "migrate": "prisma migrate dev",
+    "prisma:generate": "prisma generate",
+    "prisma:migrate": "prisma migrate dev",
+    "prisma:deploy": "prisma migrate deploy",
+    "prisma:studio": "prisma studio",
     "seed": "tsx prisma/seed.ts",
     "prisma:seed": "tsx prisma/seed.ts",
     "worker:start": "tsx watch src/jobs/worker.ts",
     "prepare": "husky install",
-    "postinstall": "npx prisma generate || true"
+    "postinstall": "prisma generate || true"
   },
   "dependencies": {
     "@prisma/client": "^5.20.0",
+    "prisma": "^5.20.0",
     "bcrypt": "^5.1.1",
     "cloudinary": "^2.5.1",
     "cookie-parser": "^1.4.6",
@@ -63,7 +64,6 @@
     "husky": "^9.1.6",
     "jest": "^29.7.0",
     "prettier": "^3.3.3",
-    "prisma": "^5.20.0",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
