--- a/backend/package.json
+++ b/backend/package.json
@@ -29,8 +29,8 @@
     "postinstall": "prisma generate || true"
   },
   "dependencies": {
-    "@prisma/client": "^5.20.0",
-    "prisma": "^5.20.0",
+    "@prisma/client": "5.20.0",
+    "prisma": "5.20.0",
     "bcrypt": "^5.1.1",
     "cloudinary": "^2.5.1",
     "cookie-parser": "^1.4.6",
