--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,7 @@
     "start:dev": "tsx watch src/server.ts",
     "dev": "tsx watch src/server.ts",
     "build": "tsc -p tsconfig.build.json",
-    "render-build": "prisma generate && prisma migrate deploy && yarn build",
+    "render-build": "npx prisma generate && npx prisma migrate deploy && yarn build",
     "lint": "eslint \"**/*.{ts,tsx}\" --max-warnings=0",
     "format": "prettier --write .",
     "test": "jest",
