--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,7 @@
   "main": "dist/server.js",
   "license": "MIT",
   "scripts": {
-    "start": "node --experimental-specifier-resolution=node dist/server.js",
+    "start": "node dist/server.js",
     "start:dev": "tsx watch src/server.ts",
     "dev": "tsx watch src/server.ts",
     "build": "tsc -p tsconfig.build.json",
